# Changelog

## 0.6.0 (unreleased)

* breaking: the setting `table_name` is now restricted to a-z and _
* full day activities are now supported and can coexist with other activities

## 0.5.1 (2023-09-27)

* fix regression: show negative over time in `list` command again

## 0.5.0 (2023-09-02)


* get rid of pendulum to make it easier to package this with pyoxidizer

## 0.4.0 (2023-08-29)

* add: `--show-all` option to `list` command
* add: support for Python 3.12, need to use alpha version of pendulum for this

## 0.3.1 (2023-08-02)

* fix: `end` will not fail when a future vacation is already defined

## 0.3.0 (2023-04-27)

* Segement Range definition changed, end is now exclusive
* changed default holiday tag to @holiday
* holiday tag can be configured in settings
* added @vacation and @travel tags
* added @sick tag
* vacations will be splitted on weekends
* add command returns a list of segments now
* handle travel overnights
* passive work (travel) will be added to work time if it is not
  adding up to more than 10 hours per day

## 0.2.0 (2023-04-14)

* future activities will not end the current activity anymore
* holidays can be added with @_holiday tag
* holidays do not require work hours and don't count towards the work hours of the day

## 0.1.2 (2023-03-29)

* calling timeturner with no arguments will now print help
* adding new activities will end the current activity
* when adding a new activity that starts before the current activity, the current activity will be ended
* when adding a new activity that is contained by the current activity, the current activity will be split into two activities

## 0.1.1 (2023-03-27)

* fix: create home directory of database file if it does not exist

## 0.1.0 (2023-03-26)

* initial release